[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/shipSelection/ShipSelectionWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/ethnocentric rg.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/backgrounds/background4.png" type="Texture" id=3]
[ext_resource path="res://scenes/parallax/Parallax.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/gameStatus/GameStatus.gd" type="Script" id=5]
[ext_resource path="res://assets/backgrounds/background3.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[node name="GameStatus" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackgroundGameover" parent="." instance=ExtResource( 4 )]
background = ExtResource( 3 )

[node name="ParallaxBackgroundEnd" parent="." instance=ExtResource( 4 )]
background = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameStatusText" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -433.0
margin_top = -60.5
margin_right = 433.0
margin_bottom = 60.5
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="ShipSelectionWindow" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false
